<resources>
    <string name="app_name">My Anime List</string>
    <string name="welcome">Selamat Datang Di </string>
    <string name="description">Aplikasi ini dibuat untuk memenuhi tugas UTS mata kuliah Praktikum Mobile Programming</string>
    <string name="name1">Nama : </string>
    <string name="name2">Pirman Abdurohman</string>
    <string name="no1">Nomor : </string>
    <string name="no2">1157050127</string>
    <string name="beranda">Lihat</string>
    <string name="list">Diagram Teratas Musiman</string>
    <string name="myprof">Identitasku</string>
    <string name="campus">Universitas Islam Negeri Sunan Gunung Djati Bandung</string>
    <string name="city">Kota Sukabumi, Provinsi Jawa Barat</string>


</resources>
